Changed header pic, colors

--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <title>Citywalk and Meetup</title>
 </head>
   <body>
-    <div id="header">wat</div>
+
+    <div class="nav">
+      <ul>
+        <a href="#home"><li>Home</li></a>
+        <a href="#about"><li>About</li></a>
+        <a href="#contact"><li id="contact-right">Contact</li></a>
+      </ul>
+    </div>
+
     <main>
+      <img id="frontimg" src="images/header4.jpg" alt="">
       <section>
         <h1>Introductionary video!</h2>
           <p>Please enjoy our introductionary video to the Citywalk and Meetup!</p>
