deleted nav, added photos, embedded video

--- a/index.html
+++ b/index.html
@@ -7,22 +7,16 @@
     <title>Citywalk and Meetup</title>
 </head>
   <body>
-
-    <div class="nav">
-      <ul>
-        <a href="#home"><li>Home</li></a>
-        <a href="#about"><li>About</li></a>
-        <a href="#contact"><li id="contact-right">Contact</li></a>
-      </ul>
-    </div>
-
     <main>
-      <img id="frontimg" src="images/header4.jpg" alt="">
       <section>
         <h1>Introductionary video!</h2>
           <p>Please enjoy our introductionary video to the Citywalk and Meetup!</p>
       </section>
-
+        <div id="video">
+          <iframe width="1280" height="720" src="https://www.youtube.com/embed/f87eH9SM1T8?rel=0&amp;showinfo=0"
+            frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen>
+          </iframe>
+        </div>
       <section>
         <p>Another section</p>
       </section>
