changed bg, added video placeholder, centered it, cleaned up code

--- a/index.html
+++ b/index.html
@@ -8,18 +8,14 @@
 </head>
   <body>
     <main>
-      <section>
-        <h1>Introductionary video!</h2>
-          <p>Please enjoy our introductionary video to the Citywalk and Meetup!</p>
+      <section id="topp">
+        <h1>Citywalk and Meetup!</h2>
       </section>
-        <div id="video">
-          <iframe width="1280" height="720" src="https://www.youtube.com/embed/f87eH9SM1T8?rel=0&amp;showinfo=0"
-            frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen>
-          </iframe>
-        </div>
-      <section>
-        <p>Another section</p>
-      </section>
+        <section id="video-container">
+          <video id="video" style="display:block; margin: 0 auto;" controls>
+            <source src="images/video.mp4">
+          </video>
+        </section>
     </main>
   </body>
 </html>
